# spectrum-intrustion-detection-v1.0.2

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
configs/: sid.yaml
configs/profiles/: field.yaml  hobbyist.yaml
configs/rules/: lte_whitelist.yaml
docs/: Compliance.md  Hardware.md  Military-Usage.md  Overview.md  Profiles.md  Quickstart.md  RF-Theory.md  Recipes.md  Troubleshooting.md
scripts/: apply_profile.sh  install_systemd.sh  linux_install.sh  macos_install.sh  run_sid.sh  setup_monitor_mode.sh  windows_install.ps1
scripts/systemd/: sid.service
sid/: alert_manager.py  config_loader.py  firewall_listener.py  main.py  utils.py
sid/alerts/: base.py  gnss_spoof.py  lte_cellwatch.py  spectrum_occupancy.py  wifi_deauth.py
sid/inputs/: gps_monitor.py  lte_scanner.py  sdr_scan.py  syslog_tail.py  wifi_sniffer.py
tests/: test_alert_manager.py  test_config.py
